k8s/test-nginx-ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-nginx
  namespace: test-nginx-marius
  labels:
    app: test-nginx
spec:
  replicas: 1

  selector:
    matchLabels:
      app: test-nginx

  template:
    metadata:
      labels:
        app: test-nginx
    spec:
      containers:
        - name: test-nginx
          image: nginx:1.25-alpine
          ports:
            - containerPort: 80
