k8s/test-nginx-ui-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-nginx
  namespace: default
spec:
  selector:
    app: test-nginx
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
